syntax = "proto3";

package model;

option java_package = "com.chefencasa.model";
option java_outer_classname = "IngredienteProto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service IngredientesService {
  rpc TraerIngrediente(Ingrediente) returns (Ingrediente) {}
}

message Ingredientes {
  repeated Ingrediente ingrediente = 1;
}

message Ingrediente {
  int32 id = 1;
  string ingrediente = 2;
}